2018-07-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2770.c:
	  Fix bug #2770.
	* device/include/mcs51/ax8052.h,
	  device/include/mcs51/ax8052f131.h,
	  device/include/mcs51/ax8052f142.h,
	  device/include/mcs51/ax8052f143.h,
	  device/include/mcs51/ax8052f151.h,
	  device/include/mcs51/compiler.h:
	  Headers for Axsem 8052, patch #166 by Thomas Sailer.

2018-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix bug #2748.
	* src/SDCCcse.h,
	  src/SDCCdebug.c,
	  src/SDCCglue.c,
	  src/SDCCpeeph.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h:
	  Improve code quality fixing a few gcc -pedantic warnings.

2018-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2767.c:
	  Fix bug #2767.

2018-07-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2764.c:
	  Fix test for systems with int wider than 16 bits.

2018-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2764.c,
	  src/stm8/peep.c,
	  src/stm8/peeph.def:
	  Fix bug #2764.

2018-06-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-20040409-2.c:
	  Disabled more tests for arm64.

2018-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/peep.c:
	  Fix bug #2108.
	* device/lib/z80/crt0.s,
	  device/lib/z180/crt0.s:
	  Implement ei for RFE #519.
	* src/SDCCbtree.cc,
	  src/SDCCnaddr.hpp,
	  configure.ac,
	  configure:
	  Remove use of STX, RFE #542.

2018-06-26 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-20040409-1.c:
	* support/regression/tests/gcc-torture-execute-20040409-2.c:
	* support/regression/tests/gcc-torture-execute-20040409-3.c:
	  Disabled for arm64.

2018-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2363.c:
	  Disable test for mcs51 small model.

2018-06-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
